Update application channel subscription configuration

--- a/src/beamlime/resources/templates/application-subscription.yaml
+++ b/src/beamlime/resources/templates/application-subscription.yaml
@@ -3,15 +3,9 @@
 # Dependencies on other templates: subscription.yaml
 
 app-name:
-input-channels:
+channels:
   # one or more subscriptions
   # - name: # unique name of the channels
   #   timeout: beamlime.config.preset_options.DEFAULTTIMEOUT  # 60 s
-  #   wait-interval: beamlime.config.preset_options.DEFAULT_WAIT_INTERVAL  # 1 s
-  # ...
-output-channels:
-  # one or more subscriptions
-  # - name: # unique name of the channels
-  #   timeout: beamlime.config.preset_options.DEFAULT_TIMEOUT  # 60 s
   #   wait-interval: beamlime.config.preset_options.DEFAULT_WAIT_INTERVAL  # 1 s
   # ...
