--- a/src/beamlime/resources/templates/workflow-target.yaml
+++ b/src/beamlime/resources/templates/workflow-target.yaml
@@ -1,6 +1,6 @@
 # SPDX-License-Identifier: BSD-3-Clause
 # Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
-# Data reduction target configuration template
+# Data reduction target specification template.
 
 name: # target-name
 index:
