Default kafka specs for consumer and producer

--- a/src/beamlime/resources/templates/kafka-producer-specs.yaml
+++ b/src/beamlime/resources/templates/kafka-producer-specs.yaml
@@ -2,6 +2,7 @@
 # Copyright (c) 2023 Scipp contributors (https://github.com/scipp)
 # microservice:Communication kafka producer/consumer specification template.
 
-broker-address: "localhost:9092"
 topic:
-specs:
+options:
+  bootstrap.servers: "localhost:9092"
+  client.id: "beamlime"
