Update gitignore and precommit config

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,21 @@
-__pycache__
-.pytest_cache
-.tox
 dist
-_skbuild
-*.egg-info
-coverage_html
-.coverage
 html
-doctrees
-build
-.vscode
-.ipynb_checkpoints
+.tox
+src/beamlime.egg-info
+
+*.sw?
+
+.clangd/
+.idea/
+.vscode/
+*.ipynb_checkpoints
+__pycache__/
+.vs/
+.virtual_documents
+.hypothesis
+.pytest_cache
+.mypy_cache
+docs/generated/
+
+.coverage
+coverate_html
