--- a/requirements/docs.in
+++ b/requirements/docs.in
@@ -1,11 +1,11 @@
 -r base.in
--r extra.in
-gitpython
+autodoc_pydantic
 ipykernel
-ipympl
-ipywidgets
-sphinx
-sphinx-autodoc-typehints==1.18.3  # later versions require sphinx >=5 which is incompatible with current sphinx-book-theme
-sphinx-book-theme
-sphinx-copybutton
+ipython!=8.7.0  # Breaks syntax highlighting in Jupyter code cells.
+myst-parser
 nbsphinx
+pydata-sphinx-theme>=0.13
+sphinx
+sphinx-autodoc-typehints==1.23.0  # Higher versions require sphinx-7, which is not supported by sphinx-design yet
+sphinx-copybutton
+sphinx-design
