--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ classifiers = [
     "Typing :: Typed",
 ]
 requires-python = ">=3.9"
-dependencies = ["pyyaml", "numpy"]
+dependencies = ["numpy"]
 dynamic = ["version"]
 
 [project.urls]
