Fix typo in CI recipe

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
 
   docs:
     needs: tests
-    uses: ./.github/workflows/docs.yml
+    uses: ./.github/workflows/reusable-docs.yml
     with:
       publish: false
       version: ${{ github.ref_name }}
