--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -14,16 +14,18 @@ jobs:
   check_release:
     name: Check if package can be released
     runs-on: ubuntu-20.04
+    if: github.event_name == 'release' && github.event.action == 'published'
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/reusable-ci-setup.yml
       # - run: tox -e check-release
-        if: github.event_name == 'release' && github.event.action == 'published'
 
   build_wheels:
     name: Wheels
     runs-on: ubuntu-20.04
 
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/workflows/reusable-ci-setup.yml
         with:
           env-file: "wheels.txt"
