--- a/.github/workflows/ci-release.yml
+++ b/.github/workflows/ci-release.yml
@@ -17,15 +17,17 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - uses: actions/checkout@v3
+        with:
+          path: ci-release
       - uses: ./.github/workflows/reusable-ci-setup.yml
       # - run: tox -e check-release
 
   build_wheels:
     name: Wheels
     runs-on: ubuntu-20.04
+    working-directory: ci-release
 
     steps:
-      - uses: actions/checkout@v3
       - uses: ./.github/workflows/reusable-ci-setup.yml
         with:
           env-file: "wheels.txt"
@@ -43,6 +45,7 @@ jobs:
     name: Deploy PyPI
     needs: [build_wheels]
     runs-on: ubuntu-20.04
+    working-directory: ci-release
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
