--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,11 +14,11 @@ jobs:
     runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v3
-        with:
-          path: ci
-      - uses: ./.github/workflows/reusable-ci-setup.yml
+      - uses: actions/setup-python@v3
         with:
           python-version: '3.10'
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements/ci.txt
       - run: tox -e static
       - uses: stefanzweifel/git-auto-commit-action@v4
         with:
@@ -26,9 +26,13 @@ jobs:
 
   tests:
     name: Tests ${{ matrix.python }} ${{ matrix.variant.os }}
-    working-directory: ci
     needs: formatting
     runs-on: ${{ matrix.variant.os }}
+    uses: ./.github/workflows/reusable-test.yml
+    with:
+      os-variant: ${{ matrix.variant.os }}
+      python-version: ${{ matrix.python-version }}
+      coverage-report: ${{ inputs.coverage-report }}
     strategy:
       matrix:
         os: ["ubuntu-20.04", "macos-11"]
@@ -36,16 +40,8 @@ jobs:
         # TODO: Decide if we are going to support Windows or not.
         python: ["3.9", "3.10", "3.11"]
 
-    steps:
-      - uses: ./.github/workflows/reusable-test.yml
-        with:
-          os-variant: ${{ matrix.variant.os }}
-          python-version: ${{ matrix.python-version }}
-          coverage-report: ${{ inputs.coverage-report }}
-
   docs:
     name: Test document build
-    working-directory: ci
     needs: tests
     uses: ./.github/workflows/reusable-docs.yml
     with:
