--- a/.github/workflows/reusable-docs.yml
+++ b/.github/workflows/reusable-docs.yml
@@ -28,9 +28,14 @@ jobs:
       - run: sudo apt install --yes graphviz pandoc
         with:
           ref: ${{ inputs.branch == '' && github.ref_name || inputs.branch }}
-      - uses: ./.github/workflows/reusable-ci-setup.yml
+      - uses: actions/checkout@v3
         with:
-          branch: ${{ inputs.branch }}
+            branch: ${{ inputs.branch }}
+      - uses: actions/setup-python@v3
+        with:
+          python-version: '3.10'
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements/ci.txt
       - run: |
           tox --skip-pkg-install -e docs -- beamlime==${VERSION}
 
