--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -22,10 +22,12 @@ jobs:
     runs-on: ${{ inputs.os-variant }}
 
     steps:
-      - uses: ./.github/workflows/reusable-ci-setup.yml
+      - uses: actions/checkout@v3
+      - uses: actions/setup-python@v3
         with:
-          os-variant: ${{ inputs.os-variant }}
           python-version: ${{ inputs.python-version }}
+      - run: python -m pip install --upgrade pip
+      - run: python -m pip install -r requirements/ci.txt
       - run: tox -e test
       - uses: actions/upload-artifact@v3
         if: ${{ inputs.coverage-report }}
