--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,23 +9,23 @@ on:
   pull_request:
 
 jobs:
-  formatting:
-    name: Formatting and static analysis
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-python@v3
-        with:
-          python-version: '3.10'
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/ci.txt
-      - run: tox -e static
-      - uses: stefanzweifel/git-auto-commit-action@v4
-        with:
-          commit_message: Apply automatic formatting
+  # formatting:
+  #   name: Formatting and static analysis
+  #   runs-on: ubuntu-20.04
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: actions/setup-python@v3
+  #       with:
+  #         python-version: '3.10'
+  #     - run: python -m pip install --upgrade pip
+  #     - run: python -m pip install -r requirements/ci.txt
+  #     - run: tox -e static
+  #     - uses: stefanzweifel/git-auto-commit-action@v4
+  #       with:
+  #         commit_message: Apply automatic formatting
 
   tests:
-    name: Tests ${{ matrix.python }} ${{ matrix.variant.os }}
+    name: Tests ${{ matrix.os }} py${{ matrix.python }}
     needs: formatting
     strategy:
       matrix:
@@ -36,7 +36,7 @@ jobs:
     uses: ./.github/workflows/reusable-test.yml
     with:
       os-variant: ${{ matrix.os }}
-      python-version: ${{ matrix.python-version }}
+      python-version: ${{ matrix.python }}
 
   docs:
     name: Test document build
