--- a/.github/workflows/reusable-test.yml
+++ b/.github/workflows/reusable-test.yml
@@ -12,6 +12,12 @@ on:
       python-version:
         default: '3.9'
         type: string
+      tox-env:
+        default: 'test'
+        type: string
+      pip-recipe:
+        default: 'requirements/ci.txt'
+        type: string
       coverage-report:
         default: false
         type: boolean
@@ -27,8 +33,8 @@ jobs:
         with:
           python-version: ${{ inputs.python-version }}
       - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/ci.txt
-      - run: tox -e test
+      - run: python -m pip install -r ${{ inputs.pip-recipe }}
+      - run: tox -e {{ inputs.tox-env }}
       - uses: actions/upload-artifact@v3
         if: ${{ inputs.coverage-report }}
         with:
