--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,11 +29,12 @@ jobs:
     needs: formatting
     strategy:
       matrix:
-        os: ["ubuntu-20.04", "macos-11"]
+        os: ["ubuntu-20.04"]
         # os: ["ubuntu-20.04", "macos-11", "windows-2019"]
-        # TODO: Decide if we are going to support Windows or not.
+        # TODO: Decide if we are going to support MacOS and Windows or not.
+        # Other OSs are tested in the Optional action.
         python: ["3.9", "3.10", "3.11"]
-    uses: ./.github/workflows/reusable-test.yml
+    uses: ./.github/workflows/test.yml
     with:
       os-variant: ${{ matrix.os }}
       python-version: ${{ matrix.python }}
@@ -41,7 +42,7 @@ jobs:
   docs:
     name: Test document build
     needs: tests
-    uses: ./.github/workflows/reusable-docs.yml
+    uses: ./.github/workflows/docs.yml
     with:
       publish: false
       version: ${{ github.ref_name }}
