--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -51,7 +51,7 @@ jobs:
           python-version: ${{ inputs.python-version }}
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r ${{ inputs.pip-recipe }}
-      - run: tox -e {{ inputs.tox-env }}
+      - run: tox -e ${{ inputs.tox-env }}
       - uses: actions/upload-artifact@v3
         if: ${{ inputs.coverage-report }}
         with:
