--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,6 +29,9 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0  # history required so setuptools_scm can determine version
       - uses: actions/setup-python@v3
         with:
           python-version: '3.9'
