--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,19 +25,15 @@ jobs:
           commit_message: Apply automatic formatting
 
   tests:
-    name: Tests ${{ matrix.os }} py${{ matrix.python }}
+    name: Tests
     needs: formatting
-    strategy:
-      matrix:
-        os: ["ubuntu-20.04"]
-        # os: ["ubuntu-20.04", "macos-11", "windows-2019"]
-        # TODO: Decide if we are going to support MacOS and Windows or not.
-        # Other OSs are tested in the Optional action.
-        python: ["3.9", "3.10", "3.11"]
     uses: ./.github/workflows/test.yml
     with:
-      os-variant: ${{ matrix.os }}
-      python-version: ${{ matrix.python }}
+      os-variant: ["ubuntu-20.04"]
+      # os-variant: ["ubuntu-20.04", "macos-11", "windows-2019"]
+      # TODO: Decide if we are going to support MacOS and Windows or not.
+      # Other OSs are tested in the Optional action.
+      python-version-variant: ["3.9", "3.10", "3.11"]
 
   docs:
     name: Test document build
