--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,14 +7,14 @@ on:
   workflow_dispatch:
     inputs:
       os-variant:
-        default: ['ubuntu-20.04']
-        type: list
-      python-version-variant:
-        default: ['3.9']
-        type: list
-      tox-env-variant:
-        default: ['test']
-        type: list
+        default: 'ubuntu-20.04'
+        type: string
+      python-version:
+        default: '3.9'
+        type: string
+      tox-env:
+        default: 'test'
+        type: string
       pip-recipe:
         default: 'requirements/ci.txt'
         type: string
@@ -24,14 +24,14 @@ on:
   workflow_call:
     inputs:
       os-variant:
-        default: ['ubuntu-20.04']
-        type: list
-      python-version-variant:
-        default: ['3.9']
-        type: list
-      tox-env-variant:
-        default: ['test']
-        type: list
+        default: 'ubuntu-20.04'
+        type: string
+      python-version:
+        default: '3.9'
+        type: string
+      tox-env:
+        default: 'test'
+        type: string
       pip-recipe:
         default: 'requirements/ci.txt'
         type: string
@@ -41,21 +41,17 @@ on:
 
 jobs:
   test:
-    name: tests ${{ matrix.os }}, py${{ matrix.python }}
-    runs-on: ${{ matrix.os }}
-    strategy:
-      matrix:
-        os: ${{ inputs.os-variant }}
-        python-version: ${{ inputs.python-version-variant }}
-        tox-env: ${{ inputs.tox-env-variant }}
+    name: tests ${{ inputs.os-variant }}, py${{ inputs.python-version }}
+    runs-on: ${{ inputs.os-variant }}
+
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: ${{ inputs.python-version }}
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r ${{ inputs.pip-recipe }}
-      - run: tox -e ${{ matrix.tox-env }}
+      - run: tox -e ${{ inputs.tox-env }}
       - uses: actions/upload-artifact@v3
         if: ${{ inputs.coverage-report }}
         with:
