--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,7 +1,8 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 6c45980
-_src_path: gh:scipp/copier_template
+_commit: cd1e0ac
+_src_path: ../copier_template/
 description: Live data reduction visualisation framework for ESS.
+github_linux_image: ubuntu-20.04
 max_python: '3.11'
 min_python: '3.9'
 orgname: scipp
