--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ on:
 jobs:
   formatting:
     name: Formatting and static analysis
-    runs-on: ubuntu-20.04
+    runs-on: 'ubuntu-20.04'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v3
@@ -29,18 +29,18 @@ jobs:
     needs: formatting
     strategy:
       matrix:
-        os: ["ubuntu-20.04"]
-        # os: ["ubuntu-20.04", "macos-11", "windows-2019"]
-        # TODO: Decide if we are going to support MacOS and Windows or not.
-        # Other OSs are tested in the Optional action.
-        python: ["3.9", "3.10", "3.11"]
+
+        os: ['ubuntu-20.04']
+        python: ['3.9']
+        tox-env: ['py39']
+
     uses: ./.github/workflows/test.yml
     with:
       os-variant: ${{ matrix.os }}
       python-version: ${{ matrix.python }}
+      tox-env: ${{ matrix.tox-env }}
 
   docs:
-    name: Test document build
     needs: tests
     uses: ./.github/workflows/docs.yml
     with:
