--- a/.github/workflows/optional.yml
+++ b/.github/workflows/optional.yml
@@ -14,16 +14,16 @@ jobs:
     strategy:
       matrix:
         os: ["macos-11", "windows-2019"]
-        py:
-          - python: "3.9"
+        python:
+          - version: "3.9"
             tox-env: "py39"
-          - python: "3.10"
+          - version: "3.10"
             tox-env: "py310"
-          - python: "3.11"
+          - version: "3.11"
             tox-env: "py311"
 
     uses: ./.github/workflows/test.yml
     with:
       os-variant: ${{ matrix.os }}
-      python-version: ${{ matrix.py.python }}
-      tox-env: ${{ matrix.py.tox-env }}
+      python-version: ${{ matrix.python.version }}
+      tox-env: ${{ matrix.python.tox-env }}
