--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,6 +34,10 @@ jobs:
         python:
           - version: '3.9'
             tox-env: 'py39'
+          - version: "3.10"
+            tox-env: "py310"
+          - version: "3.11"
+            tox-env: "py311"
 
     uses: ./.github/workflows/test.yml
     with:
