--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,13 +16,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/setup-python@v3
         with:
-          python-version: 3.8
-      - run: python -m pip install --upgrade pip
-      - run: python -m pip install -r requirements/ci.txt
-      # - run: tox -e check-release
-        if: github.event_name == 'release' && github.event.action == 'published'
+          submodules: true
+          fetch-depth: 0  # history required so cmake can determine version
+
+      - uses: conda-incubator/setup-miniconda@v2
+      - run: conda install --yes conda-build
+      - run: conda build --channel conda-forge --channel scipp --python=3.9 --no-anaconda-upload --override-channels --output-folder conda/package conda
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: conda-package-noarch
+          path: conda/package/*/beamlime*.tar.bz2
 
   build_wheels:
     name: Wheels
@@ -35,7 +40,8 @@ jobs:
 
       - uses: actions/setup-python@v3
         with:
-          python-version: 3.8
+          python-version: '3.9'
+
 
       - run: python -m pip install --upgrade pip
       - run: python -m pip install -r requirements/wheels.txt
@@ -56,9 +62,9 @@ jobs:
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
-      - uses: actions/download-artifact@v2
+      - uses: actions/download-artifact@v3
       - uses: actions/setup-python@v3
-      - uses: pypa/gh-action-pypi-publish@v1.8.8
+      - uses: pypa/gh-action-pypi-publish@v1.8.6
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
