--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,10 @@ defaults:
     shell: bash -l {0}  # required for conda env
 
 jobs:
-  check_release:
-    name: Check if package can be released
-    runs-on: ubuntu-20.04
+  build_conda:
+    name: Conda build
+    runs-on: 'ubuntu-20.04'
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v3
@@ -25,7 +26,7 @@ jobs:
 
   build_wheels:
     name: Wheels
-    runs-on: ubuntu-20.04
+    runs-on: 'ubuntu-20.04'
 
     steps:
       - uses: actions/checkout@v3
@@ -50,8 +51,8 @@ jobs:
 
   upload_pypi:
     name: Deploy PyPI
-    needs: [build_wheels]
-    runs-on: ubuntu-20.04
+    needs: [build_wheels, build_conda]
+    runs-on: 'ubuntu-20.04'
     if: github.event_name == 'release' && github.event.action == 'published'
 
     steps:
@@ -61,3 +62,26 @@ jobs:
         with:
           user: __token__
           password: ${{ secrets.PYPI_TOKEN }}
+
+  upload_conda:
+    name: Deploy Conda Forge
+    needs: [build_wheels, build_conda]
+    runs-on: 'ubuntu-20.04'
+    if: github.event_name == 'release' && github.event.action == 'published'
+
+    steps:
+      - uses: actions/download-artifact@v3
+      - uses: conda-incubator/setup-miniconda@v2
+        with:
+          python-version: '3.9'
+
+      - run: conda install -c conda-forge --yes anaconda-client
+      - run: anaconda --token ${{ secrets.ANACONDATOKEN }} upload --user scipp --label main $(ls conda-package-*/*/*.tar.bz2)
+
+  docs:
+    needs: [upload_conda, upload_pypi]
+    uses: ./.github/workflows/docs.yml
+    with:
+      publish: ${{ github.event_name == 'release' && github.event.action == 'published' }}
+      version: ${{ github.ref_name }}
+    secrets: inherit
