--- a/tox.ini
+++ b/tox.ini
@@ -8,19 +8,35 @@ setenv =
   JUPYTER_PLATFORM_DIRS = 1
 commands = pytest --cov=beamlime --cov-report html:coverage_html/python
 
+[testenv:nightly]
+deps =
+  -r requirements/nightly.txt
+  pytest
+commands = pytest
+
+[testenv:unpinned]
+description = Test with unpinned dependencies, as a user would install now.
+deps =
+  beamlime
+  pytest
+commands = pytest
+
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
-deps =
-  {posargs:}
-  -r requirements/docs.txt
+deps = -r requirements/docs.txt
 allowlist_externals=find
-setenv =
-  {[testenv]setenv}
-  # Search directory for confuse for custom config enabling plopp plotting
-  SCIPPDIR={toxinidir}{/}docs{/}buildconfig
 commands = python -m sphinx -j2 -v -b html -d {toxworkdir}/docs_doctrees docs html
            python -m sphinx -j2 -v -b doctest -d {toxworkdir}/docs_doctrees docs html
            find html -type f -name "*.ipynb" -not -path "html/_sources/*" -delete
+
+[testenv:releasedocs]
+description = invoke sphinx-build to build the HTML docs from a released version
+skip_install = true
+deps =
+  beamlime=={posargs}
+  {[testenv:docs]deps}
+allowlist_externals={[testenv:docs]allowlist_externals}
+commands = {[testenv:docs]commands}
 
 [testenv:linkcheck]
 description = Run Sphinx linkcheck
@@ -44,7 +60,10 @@ commands = python -m mypy .
 
 [testenv:deps]
 description = Update dependencies by running pip-compile-multi
-deps = pip-compile-multi
+deps =
+  pip-compile-multi
+  tomli
 skip_install = true
 changedir = requirements
-commands = pip-compile-multi -d .
+commands = python ./make_base.py --nightly scipp,sciline,plopp
+           pip-compile-multi -d .
