--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ requires-python = ">=3.9"
 # Run 'tox -e deps' after making changes here. This will update requirement files.
 # Make sure to list one dependency per line.
 dependencies = [
-  "numpy"
+  "numpy",
+  "rich"
 ]
 
 dynamic = ["version"]
