--- a/tox.ini
+++ b/tox.ini
@@ -65,5 +65,5 @@ deps =
   tomli
 skip_install = true
 changedir = requirements
-commands = python ./make_base.py --nightly scipp,sciline,plopp
+commands = python ./make_base.py --nightly scipp,sciline,plopp,scippneutron
            pip-compile-multi -d .
