--- a/.copier-answers.yml
+++ b/.copier-answers.yml
@@ -1,12 +1,12 @@
 # Changes here will be overwritten by Copier; NEVER EDIT MANUALLY
-_commit: 710e613
+_commit: 9cf97d4
 _src_path: gh:scipp/copier_template
 description: Live data reduction visualisation framework for ESS.
 max_python: '3.11'
 min_python: '3.9'
 namespace_package: ''
-nightly_deps: scipp,sciline,plopp
+nightly_deps: scipp,sciline,plopp,scippneutron
 orgname: scipp
 projectname: beamlime
-related_projects: Scipp,Sciline,Plopp
+related_projects: Scipp,Sciline,Plopp,ScippNeutron
 year: 2023
