--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,8 +30,13 @@ requires-python = ">=3.9"
 # Run 'tox -e deps' after making changes here. This will update requirement files.
 # Make sure to list one dependency per line.
 dependencies = [
+  "ess-streaming-data-types",
   "numpy",
-  "rich"
+  "plopp",
+  "rich",
+  "sciline",
+  "scipp",
+  "scippneutron"
 ]
 
 dynamic = ["version"]
