Update repository settings.

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,17 @@
+# Build artifacts
+build
 dist
 html
 .tox
-src/beamlime.egg-info
+*.egg-info
 
 *.sw?
 
+# Environments
+venv
+
+# Caches
 .clangd/
-.idea/
-.vscode/
 *.ipynb_checkpoints
 __pycache__/
 .vs/
@@ -17,7 +21,24 @@ __pycache__/
 .mypy_cache
 docs/generated/
 
+# Editor settings
+.idea/
+.vscode/
+
+# Data files
+*.data
+*.dat
+*.csv
+*.xye
+*.h5
+*.hdf5
+*.hdf
+*.nxs
+*.raw
+*.cif
+*.rcif
+
+# Test outputs
 .coverage
 coverate_html
-
 .benchmarks/
