Update tox commands.

--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,7 @@ setenv =
 commands = pytest --cov=beamlime --cov-report html:coverage_html/python
 
 [testenv:nightly]
-deps =
-  -r requirements/nightly.txt
-  pytest
+deps = -r requirements/nightly.txt
 commands = pytest
 
 [testenv:unpinned]
@@ -66,4 +64,4 @@ deps =
 skip_install = true
 changedir = requirements
 commands = python ./make_base.py --nightly scipp,sciline,plopp,scippneutron
-           pip-compile-multi -d .
+           pip-compile-multi -d . --backtracking
