--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ isolated_build = true
 deps = -r requirements/test.txt
 setenv =
   JUPYTER_PLATFORM_DIRS = 1
-commands = pytest --cov=beamlime --cov-report html:coverage_html/python
+commands = pytest --cov=beamlime --cov-report html:coverage_html/python {posargs}
 
 [testenv:nightly]
 deps = -r requirements/nightly.txt
