Move test files to server, add pooch helper and add large file test flag for nightly tests.

--- a/tox.ini
+++ b/tox.ini
@@ -10,7 +10,7 @@ commands = pytest --cov=beamlime --cov-report html:coverage_html/python {posargs
 
 [testenv:nightly]
 deps = -r requirements/nightly.txt
-commands = pytest
+commands = pytest --large-file-test
 
 [testenv:unpinned]
 description = Test with unpinned dependencies, as a user would install now.
