--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,8 @@ requires-python = ">=3.10"
 # Run 'tox -e deps' after making changes here. This will update requirement files.
 # Make sure to list one dependency per line.
 dependencies = [
-  "rich"
+  "rich",
+  "scippneutron>=24.03.0",
 ]
 
 dynamic = ["version"]
