--- a/tox.ini
+++ b/tox.ini
@@ -10,14 +10,14 @@ commands = pytest --cov=beamlime --cov-report html:coverage_html/python {posargs
 
 [testenv:nightly]
 deps = -r requirements/nightly.txt
-commands = pytest --large-file-test
+commands = pytest --large-file-test {posargs}
 
 [testenv:unpinned]
 description = Test with unpinned dependencies, as a user would install now.
 deps =
   -r requirements/basetest.txt
   beamlime
-commands = pytest
+commands = pytest {posargs}
 
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
