Add missing test dependencies.

--- a/conda/meta.yaml
+++ b/conda/meta.yaml
@@ -30,6 +30,9 @@ test:
     - beamlime
   requires:
     - pytest
+    - pytest-asyncio
+    - psutil
+    - pandas
     - numpy
     - scipp
     - plopp
