--- a/tox.ini
+++ b/tox.ini
@@ -63,5 +63,5 @@ deps =
   tomli
 skip_install = true
 changedir = requirements
-commands = python ./make_base.py --nightly scipp,sciline,plopp,scippneutron
+commands = python ./make_base.py --nightly scipp,sciline,plopp,essreduce
            pip-compile-multi -d . --backtracking
