Use essreduce instead of scippneutron.

--- a/requirements/basetest.in
+++ b/requirements/basetest.in
@@ -9,5 +9,5 @@ psutil
 pandas
 pyarrow  # Future hard-dependency of pandas, it can be removed from pandas>3.0
 scipp
-scippneutron
+essreduce
 plopp
