Add plugin nightly test.

--- a/tox.ini
+++ b/tox.ini
@@ -19,6 +19,10 @@ deps =
   beamlime
 commands = pytest {posargs}
 
+[testenv:plugin]
+deps = -r requirements/plugin.txt
+commands = pytest {posargs}
+
 [testenv:docs]
 description = invoke sphinx-build to build the HTML docs
 deps = -r requirements/docs.txt
