Rename workflow plugin group name and update data reduction handlers according to the protocol.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -111,5 +111,5 @@ enable_error_code = [
 ]
 warn_unreachable = true
 
-[project.entry-points."beamlime.stateless"]
-dummy_stateless = "beamlime.workflow_protocols:dummy_stateless_workflow"
+[project.entry-points."beamlime.workflow_plugin"]
+dummy = "beamlime.workflow_protocols:DummyLiveWorkflow"
