Add kafka library and streaming type helper packages as dependencies.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ requires-python = ">=3.10"
 dependencies = [
   "rich",
   "essreduce",
+  "confluent_kafka",
+  "ess-streaming-data-types"
 ]
 
 dynamic = ["version"]
