--- a/requirements/nightly.in
+++ b/requirements/nightly.in
@@ -4,6 +4,8 @@
 rich
 confluent_kafka
 ess-streaming-data-types
+zmq
+msgpack
 scipp @ https://github.com/scipp/scipp/releases/download/nightly/scipp-nightly-cp310-cp310-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
 sciline @ git+https://github.com/scipp/sciline@main
 plopp @ git+https://github.com/scipp/plopp@main
