Refactor and add multiple producers

--- a/src/beamlime/kafka/docker-compose-reduction.yml
+++ b/src/beamlime/kafka/docker-compose-reduction.yml
@@ -1,11 +1,13 @@
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper:latest
+    container_name: kafka-zookeeper
     environment:
       ZOOKEEPER_CLIENT_PORT: 2181
 
   kafka:
     image: confluentinc/cp-kafka:latest
+    container_name: kafka-broker
     depends_on:
       - zookeeper
     ports:
