Add schema registry to docker

--- a/src/beamlime/kafka/docker-compose-reduction.yml
+++ b/src/beamlime/kafka/docker-compose-reduction.yml
@@ -15,7 +15,9 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092,PLAINTEXT_INTERNAL://0.0.0.0:29092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092,PLAINTEXT_INTERNAL://kafka:29092
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       # Disk usage limits
       KAFKA_LOG_RETENTION_BYTES: 1073741824  # 1GB total retention
@@ -24,3 +26,22 @@ services:
       KAFKA_LOG_CLEANUP_POLICY: delete       # Delete old segments
       KAFKA_LOG_CLEANER_MIN_CLEANABLE_RATIO: 0.5
       KAFKA_LOG_RETENTION_CHECK_INTERVAL_MS: 120000  # Check every 2 minutes
+    healthcheck:
+      test: ["CMD", "kafka-topics", "--bootstrap-server", "localhost:9092", "--list"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+
+  schema-registry:
+    image: confluentinc/cp-schema-registry:latest
+    container_name: kafka-schema-registry
+    depends_on:
+      kafka:
+        condition: service_healthy
+    ports:
+      - "8081:8081"
+    environment:
+      SCHEMA_REGISTRY_HOST_NAME: schema-registry
+      SCHEMA_REGISTRY_KAFKASTORE_BOOTSTRAP_SERVERS: kafka:29092
+      SCHEMA_REGISTRY_LISTENERS: http://0.0.0.0:8081
+      SCHEMA_REGISTRY_COMPATIBILITY_LEVEL: FORWARD
